--- a/app/src/main/res/layout/item_list_movie.xml
+++ b/app/src/main/res/layout/item_list_movie.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/image_container"
     android:layout_width="wrap_content"
-    android:layout_height="40dp"
-    android:text="asdasd" />
+    android:layout_height="wrap_content"
+    android:contentDescription="@string/movie_list_image" />
