--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,9 +3,11 @@
     <string-array name="pref_sort_options">
         <item>@string/pref_label_sort_by_popular</item>
         <item>@string/pref_label_sort_by_rating</item>
+        <item>@string/pref_label_favorite_movies</item>
     </string-array>
     <string-array name="pref_sort_values">
         <item>@string/pref_sort_by_popular</item>
         <item>@string/pref_sort_by_rating</item>
+        <item>@string/pref_show_favorite_movies</item>
     </string-array>
 </resources>
