--- a/app/src/main/res/layout-v21/fragment_movie_details.xml
+++ b/app/src/main/res/layout-v21/fragment_movie_details.xml
@@ -13,18 +13,19 @@
             android:id="@+id/original_movie_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="40dp"
             android:background="@color/colorAccent"
+            android:elevation="4dp"
+            android:padding="40dp"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:paddingBottom="16dp"
             android:paddingLeft="24dp"
             android:paddingRight="24dp"
-            android:paddingTop="16dp"
-            android:orientation="vertical">
+            android:paddingTop="16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -72,8 +73,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:text="Medium Text"
                 android:inputType="textMultiLine"
+                android:text="Medium Text"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
 
@@ -91,7 +92,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/double_activity_horizontal_margin"
             android:layout_marginStart="@dimen/double_activity_horizontal_margin"
             android:text="@string/details_trailers"
             android:textColor="@color/colorPrimary"
