Move SettingsActivity and its fragment to app.ui.settings package

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,7 +2,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_settings"
-    android:name="com.josecognizant.popmovies.ui.settings.SettingsFragment"
+    android:name="com.josecognizant.popmovies.app.ui.settings.SettingsFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior" />
