--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.josecognizant.popmovies.MainActivity">
+    tools:context="com.josecognizant.popmovies.app.ui.details.MovieDetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
