--- a/app/src/main/res/layout/item_list_movie.xml
+++ b/app/src/main/res/layout/item_list_movie.xml
@@ -2,6 +2,6 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/image_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:contentDescription="@string/movie_list_image"
     android:scaleType="fitStart" />
